--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -14,8 +14,9 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/container1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="1200dp">
 
             <ViewFlipper
                 android:id="@+id/image_flipper"
@@ -45,9 +46,22 @@
                 android:layout_marginTop="16dp"
                 android:text="Отдам в добрые руки котенка"
                 android:textColor="@color/black"
-                android:textSize="16dp"
+                android:textSize="24dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/item_date" />
+
+
+            <TextView
+                android:id="@+id/tv_cost"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Cost:"
+                android:textColor="@color/grey"
+                android:textSize="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/item_title" />
 
             <TextView
                 android:id="@+id/tv_price_type"
@@ -57,17 +71,17 @@
                 android:text="Бесплатно"
                 android:textColor="@color/black"
                 android:textSize="16dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/item_title" />
-
+                app:layout_constraintStart_toEndOf="@id/tv_cost"
+                app:layout_constraintTop_toTopOf="@id/tv_cost" />
 
             <TextView
                 android:id="@+id/item_description"
-                android:layout_width="0dp"
-                android:layout_height="53dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
                 android:text="Отдам котёнка девочка София очень красивая, ласковая, добрая, чистая все кушает! Возраст где то 3 мес. Отдаём потому что переезжаем. Телеграм"
-                app:layout_constraintStart_toStartOf="@id/tv_price_type"
+                app:layout_constraintStart_toStartOf="@id/tv_cost"
                 app:layout_constraintTop_toBottomOf="@id/tv_price_type" />
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -98,7 +112,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@id/item_description"
+                app:layout_constraintStart_toStartOf="@id/tv_cost"
                 app:layout_constraintTop_toBottomOf="@id/item_description" />
 
 
@@ -121,46 +135,39 @@
                 app:layout_constraintStart_toStartOf="@id/author_name"
                 app:layout_constraintTop_toBottomOf="@id/author_name" />
 
-            <LinearLayout
-                android:id="@+id/add_comment"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="10dp"
-                android:weightSum="1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/rating_bar">
-<!--            <EditText-->
-<!--                android:id="@+id/review_title"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="8dp"-->
-<!--                android:layout_marginStart="8dp"-->
-<!--                android:layout_marginEnd="8dp"-->
-<!--                android:hint="Title"-->
-<!--                android:background="@drawable/edittext_border"-->
-<!--                app:layout_constraintBottom_toTopOf="@+id/add_review_text"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintTop_toBottomOf="@id/rating_bar" />-->
 
             <EditText
                 android:id="@+id/add_review_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:hint="Comment"
                 android:background="@drawable/bg_edittext"
+                android:hint="Comment"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/rating_bar" />
-            </LinearLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/reviewsRecyclerView"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/add_comment" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="128dp"
+                android:elevation="1dp"
+                app:layout_constraintTop_toBottomOf="@id/add_review_text"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/reviewsRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </ScrollView>
 
     <FrameLayout
