--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -39,6 +39,25 @@
                 app:layout_constraintTop_toBottomOf="@id/image_flipper" />
 
             <TextView
+                android:id="@+id/username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="19dp"
+                android:layout_marginEnd="4dp"
+                android:text="@string/name"
+                app:layout_constraintEnd_toStartOf="@+id/item_publisher_photo"
+                app:layout_constraintTop_toBottomOf="@id/image_flipper" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/item_publisher_photo"
+                android:layout_width="40dp"
+                android:layout_height="60dp"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/profile_modified"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/image_flipper" />
+
+            <TextView
                 android:id="@+id/item_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -84,67 +103,40 @@
                 app:layout_constraintStart_toStartOf="@id/tv_cost"
                 app:layout_constraintTop_toBottomOf="@id/tv_price_type" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/item_publisher_photo"
-                android:layout_width="40dp"
-                android:layout_height="60dp"
-                android:layout_marginEnd="8dp"
-                android:src="@drawable/profile_modified"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/image_flipper" />
-
-            <TextView
-                android:id="@+id/user_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="19dp"
-                android:layout_marginEnd="4dp"
-                android:text="@string/name"
-                app:layout_constraintEnd_toStartOf="@+id/item_publisher_photo"
-                app:layout_constraintTop_toBottomOf="@id/image_flipper" />
-
-            <TextView
-                android:id="@+id/review"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Review"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@id/tv_cost"
-                app:layout_constraintTop_toBottomOf="@id/item_description" />
-
-
-            <TextView
-                android:id="@+id/author_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="@string/name"
-                android:textColor="@color/black"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/review" />
-
             <RatingBar
                 android:id="@+id/rating_bar"
                 style="?android:attr/ratingBarStyleSmall"
+                android:numStars="5"
+                android:rating="0"
+                android:stepSize="1"
+                android:isIndicator="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@id/author_name"
-                app:layout_constraintTop_toBottomOf="@id/author_name" />
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="@id/tv_cost"
+                app:layout_constraintTop_toBottomOf="@id/item_description"/>
 
 
             <EditText
                 android:id="@+id/add_review_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/bg_edittext"
-                android:hint="Comment"
+                android:hint="Leave your review"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/rating_bar" />
+
+            <Button
+                android:id="@+id/leave_review"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="32dp"
+                android:text="Submit"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/add_review_text"
+                />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -152,7 +144,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="128dp"
                 android:elevation="1dp"
-                app:layout_constraintTop_toBottomOf="@id/add_review_text"
+                app:layout_constraintTop_toBottomOf="@id/leave_review"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent">
 
